added auth-middleware function to swagger and made put ,get and delete routes private
